--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPA Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>8 Semester GPA Calculator</h1>
+    <h2>8th Semester GPA Calculator</h2>
+    <div class="dev">
+        <p>Developed by&nbsp</p>
+        <a href="https://web.facebook.com/kabbotalukderr/">Kabbo Talukder</a>
+    </div>
     <div id="calculator">
-        <div class="input-container">
+        <div class="input-container s1">
             <label for="semester1">1st Semester:</label>
             <input type="number" step="0.01" id="semester1" class="grade-input">
         </div>
@@ -41,8 +46,8 @@
         </div>
 
         <button onclick="calculateGPA()">Calculate 8th GPA</button>
-        <br/>
-        <div id="result"></div>
+        <br>
+        <h3 id="result"></h3>
     </div>
 
     <script src="script.js"></script>
