--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPA Calculator</title>
+    <title>8th Semester GPA Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -45,7 +45,7 @@
             <input type="number" step="0.01" id="cgpa" class="grade-input">
         </div>
 
-        <button onclick="calculateGPA()">Calculate 8th GPA</button>
+        <button onclick="calculateGPA()">Calculate 8th Semester GPA</button>
         <br>
         <h3 id="result"></h3>
     </div>
