--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>8th Semester GPA Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <h2>8th Semester GPA Calculator</h2>
@@ -11,6 +12,7 @@
         <p>Developed by&nbsp</p>
         <a href="https://web.facebook.com/kabbotalukderr/">Kabbo Talukder</a>
     </div>
+    <button id="themeButton" onclick="toggleTheme()"><i class="fas fa-moon"></i></button>
     <div id="calculator">
         <div class="input-container s1">
             <label for="semester1">1st Semester:</label>
@@ -44,8 +46,7 @@
             <label for="cgpa">CGPA:</label>
             <input type="number" step="0.01" id="cgpa" class="grade-input">
         </div>
-
-        <button onclick="calculateGPA()">Calculate 8th Semester GPA</button>
+        <button class="calButton" onclick="calculateGPA()">Calculate 8th Semester GPA</button>
         <br>
         <h3 id="result"></h3>
     </div>
