minor change to UI

--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
     <button id="themeButton" onclick="toggleTheme()"><i class="fas fa-moon"></i></button>
     <div id="calculator">
         <div class="input-container s1">
-            <label for="semester1">1st Semester:</label>
+            <label for="semester1">1st Semester</label>
             <input type="number" step="0.01" id="semester1" class="grade-input">
         </div>
         <div class="input-container">
-            <label for="semester2">2nd Semester:</label>
+            <label for="semester2">2nd Semester</label>
             <input type="number" step="0.01" id="semester2" class="grade-input">
         </div>
         <div class="input-container">
-            <label for="semester3">3rd Semester:</label>
+            <label for="semester3">3rd Semester</label>
             <input type="number" step="0.01" id="semester3" class="grade-input">
         </div>
         <div class="input-container">
-            <label for="semester4">4th Semester:</label>
+            <label for="semester4">4th Semester</label>
             <input type="number" step="0.01" id="semester4" class="grade-input">
         </div>
         <div class="input-container">
-            <label for="semester5">5th Semester:</label>
+            <label for="semester5">5th Semester</label>
             <input type="number" step="0.01" id="semester5" class="grade-input">
         </div>
         <div class="input-container">
-            <label for="semester6">6th Semester:</label>
+            <label for="semester6">6th Semester</label>
             <input type="number" step="0.01" id="semester6" class="grade-input">
         </div>
         <div class="input-container">
-            <label for="semester7">7th Semester:</label>
+            <label for="semester7">7th Semester</label>
             <input type="number" step="0.01" id="semester7" class="grade-input">
         </div>
         <div class="input-container">
-            <label for="cgpa">CGPA:</label>
+            <label for="cgpa">CGPA</label>
             <input type="number" step="0.01" id="cgpa" class="grade-input">
         </div>
         <button class="calButton" onclick="calculateGPA()">Calculate 8th Semester GPA</button>
