minor change to UI

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <label for="semester1">1st Semester</label>
             <input type="number" step="0.01" id="semester1" class="grade-input">
         </div>
-        <div class="input-container">
+        <div class="input-container">s
             <label for="semester2">2nd Semester</label>
             <input type="number" step="0.01" id="semester2" class="grade-input">
         </div>
