--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <label for="semester1">1st Semester</label>
             <input type="number" step="0.01" id="semester1" class="grade-input">
         </div>
-        <div class="input-container">s
+        <div class="input-container">
             <label for="semester2">2nd Semester</label>
             <input type="number" step="0.01" id="semester2" class="grade-input">
         </div>
@@ -46,7 +46,9 @@
             <label for="cgpa">CGPA</label>
             <input type="number" step="0.01" id="cgpa" class="grade-input">
         </div>
-        <button class="calButton" onclick="calculateGPA()">Calculate 8th Semester GPA</button>
+        <div class="button-container">
+            <button class="button" onclick="calculateGPA()">Calculate 8th Semester GPA</button>
+        </div>
         <br>
         <h3 id="result"></h3>
     </div>
